[package]
authors = ["Jimmy Spearman"]
name = "sendkeys-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A macro to send keystrokes using the windows crate"
homepage = "https://github.com/Subwater/sendkeys-rs"
repository = "https://github.com/Subwater/sendkeys-rs"
readme = "readme.md"

[dependencies]
windows = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
